--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,12 +4,15 @@ on:
     branches:
       - develop
 jobs:
-  check-applications:
+  check-application:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ['1.14', '1.15']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.15
+          go-version: ${{ matrix.go }}
       - run: go test
       - run: go run math.go
